--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "Austin Alozie",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^8.5.1"
+    "nodemailer": "^6.4.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
